feat: implement comprehensive enterprise-grade form validation framework across SPEMS frontend and backend